Maximum value of physics gravity is too small #27311

Closed
opened 2011-05-06 20:58:16 +02:00 by Maciej Krol · 3 comments

%%%Maximum value of physics gravity in game engine (SceneGameData.physics_gravity) is set to 25 m/s^2. It is too small when dealing with scaled scenes (i.e. 1 blender unit = 1 decimeter).
According to http://bulletphysics.org/mediawiki-1.5.8/index.php/Scaling_The_World when rigid objects are smaller than 0.05 unit precision artifacts can surface. To overcome this the scene should be scaled (expressed in smaller units). When scene is scaled by 10 (1bu = 1dcm) gravity should be scaled by the same factor that is instead 9.81 the gravity should be set to 98.1. Currently it is not possible due to clamping of physics gravity to 25.0.
Gravity in physics engine should be clamped to much bigger value (i.e. 10000) or scaled by inverse of UnitSetting.scale_length.
I am using Blender 2.57.1 r36339%%%

%%%Maximum value of physics gravity in game engine (SceneGameData.physics_gravity) is set to 25 m/s^2. It is too small when dealing with scaled scenes (i.e. 1 blender unit = 1 decimeter). According to http://bulletphysics.org/mediawiki-1.5.8/index.php/Scaling_The_World when rigid objects are smaller than 0.05 unit precision artifacts can surface. To overcome this the scene should be scaled (expressed in smaller units). When scene is scaled by 10 (1bu = 1dcm) gravity should be scaled by the same factor that is instead 9.81 the gravity should be set to 98.1. Currently it is not possible due to clamping of physics gravity to 25.0. Gravity in physics engine should be clamped to much bigger value (i.e. 10000) or scaled by inverse of UnitSetting.scale_length. I am using Blender 2.57.1 r36339%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Simple fix, in svn now. Thanks for the report!%%%

%%%Simple fix, in svn now. Thanks for the report!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#27311
No description provided.