Bugfix #27311

Physics Gravity property now has UI range of 0-25, but real range goes
to 10000 to allow scaled scenes.